update batch session management to support agent queuing and ticket-based registration processing.